--- a/p8105_hw1_yz4717.Rmd
+++ b/p8105_hw1_yz4717.Rmd
@@ -90,6 +90,16 @@ combined_frame = data.frame(
 )
 ```
 
-I created a random sample for standard normal distribution(mean = 0, sd = 1), and the result are shown above.
+I created a random sample for standard normal distribution(mean = 0, sd = 1),a logical vector, a character vector and a  and the result are shown above.
 
+```{r}
+mean_1 = mean(vc_norm)
+mean_2 = mean(vc_logic)
+mean_3 = mean(vc_char)
+mean_4 = mean(vc_fac)
 
+mean_rs = list(mean_1,mean_2,mean_3,mean_4)
+mean_rs
+```
+
+As the question mentioned, I used the "mean()" function to calculate average. As you can see, this function can calculate the mean of numeric and logical vector. It is obvious that it can calculate numeric vector and can not calculate character vector. When it comes to logical vector, we can still get a result, just because the logical value is a simple '0' or '1' in the computer(which stands for 'False' or 'True' respectively).
