--- a/p8105_hw1_yz4717.Rmd
+++ b/p8105_hw1_yz4717.Rmd
@@ -31,6 +31,12 @@ names(early_january_weather)
 
 All names of vectors are shown above.
 
+```{r}
+skimr::skim(early_january_weather)
+```
+
+There are numerous parameters in the result of summary, I prefer to talk about two special parameters.First, the completion of gust speed is in poor condition, which accounts for 14%. In such circumstance, this variable is unable to use.When it comes to wind direction, its variance is the highest among these variables. In other words, its has a wide range.
+
 ```{r shape}
 shape_row = nrow(early_january_weather)
 shape_col = ncol(early_january_weather)
@@ -42,7 +48,7 @@ The dataset contains `r shape_row` Rows * `r shape_col` Columns.
 rs_mean = mean(early_january_weather$temp)
 ```
 
-And calculation of mean of temperature are shown, so the result is `r rs_mean`.
+The mean calculation of temperature are shown above, and the result is `r rs_mean` Fahrenheit degree.
 Then, I used the ggplot function to generate a scatterplot of tempureture and time.The specific procedure will be shown in the following chunck.
 
 ```{r pull_plot}
@@ -54,13 +60,11 @@ time_temp_tib = tibble(
 
 plot_sc = 
   ggplot(
-  data = time_temp_tib
-)+geom_point(
-  mapping = aes(
+  data = time_temp_tib, aes(
     x = time,
     y = temp,
     color = humid)
-)
+)+geom_point()+geom_line()
 plot_sc
 ```
 
@@ -74,7 +78,7 @@ Then, I use "ggsave" to save last plot.
 
 ## Problem 2
 
-In problem2, I generated 4 different vector and grouped them into a data frame. The specific code and result are shown below.
+In problem 2, I generated 4 different vector and grouped them into a data frame. The specific code and result are shown in following chunk. To group all the variables in a data frame without warnings, length of variables should be 10. A numeric vector will be generated from normal distribution with mean = 0 and variance = 1. Then, logic variables will determine if numeric variable is greater than 0.
 
 ```{r create_df}
 vc_norm = rnorm(10,mean = 0,sd = 1)
