--- a/p8105_hw1_yz4717.Rmd
+++ b/p8105_hw1_yz4717.Rmd
@@ -111,7 +111,7 @@ mean_rs = list(mean_1,mean_2,mean_3,mean_4)
 mean_rs
 ```
 
-As the question mentioned, I used "mean()" function to calculate average. As you can see, this function can calculate the mean of numeric and logical vector. It is obvious that it can calculate numeric vector and can not calculate character vector.This reason is also true for the factor variable, which is essentially still a character variable at this point. When it comes to logical vector, the reason we can still get results is that the logical value is a simple '0' or '1' in computer system(which stands for 'False' or 'True' respectively).
+As the question mentioned, I used "mean()" function to calculate average. As you can see, this function can calculate the mean of numeric and logical vector. From our actual perceptions，it is obvious that it can calculate numeric vector and can not calculate character vector.This reason is also true for the factor variable, which is essentially still a character variable at this point. When it comes to logical vector, the reason we can still get results is that logical value is a simple '0' or '1' in computer system(which stands for 'False' or 'True' respectively).
 
 ```{r convert type, eval=FALSE}
 vc_norm_new = as.numeric(vc_norm)
@@ -132,7 +132,7 @@ cframe_new = list(
 
 ```
 
-As the former analysis mentioned, logical and numeric vector can convert into numeric one without any difficulty just because they are actual numbers in the system. for the same reason, the system can't convert character vector. When it comes to factor vector, if we force R to do a type conversion, the system will convert them into real numbers.
+As the former analysis mentioned, logical and numeric vector can convert into numeric one without any difficulty just because they are actual numbers in the system. for the same reason, the system can't convert character vector. When it comes to factor vector, if we force R to do a type conversion, the system will convert them into real numbers automatically.
 
 ```{r cal_mean_coverted, eval=FALSE}
 mean_rs_new = list(
